2002-03-28  Maciej Stachowiak  <mjs@apple.com>

	Fix Radar 2890340 (JavaScript doesn't work)

	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::executeScript): Implement
	the other overloaded version of this function. This is needed for
	JavaScript to work.

2002-03-28  Darin Adler  <darin@apple.com>

	* src/kdelibs/khtml/misc/loader.h: Added API for looking at the contents of the
        cache, flushing the cache, and disabling the cache.
	* src/kwq/KWQKloader.mm: (Cache::requestImage): Don't cache if disabled.
        (Cache::requestStyleSheet): Don't cache if disabled.
	(Cache::requestScript): Don't cache if disabled.
        (Cache::flush): Simplify ifdefs.
        (Cache::getStatistics), (Cache::flushAll), (Cache::setCacheDisabled): New.

2002-03-28  Richard Williamson  <rjw@apple.com>

        Fixed crasher.  Removed unnecessary cleanup to widget that was called after the
        widget was already disposed.
        
	* src/kdelibs/khtml/rendering/render_replaced.cpp: (RenderWidget::detach):

2002-03-27  Richard Williamson  <rjw@apple.com>

        Removed problematic code.  Not sure why it was necessary.  For now
        it prevents crasher.
        
	* src/kdelibs/khtml/rendering/render_table.cpp: (RenderTable::addColInfo):

2002-03-27  Darin Adler  <darin@apple.com>

	* src/kwq/KWQListImpl.mm: (KWQListImpl::insert): Fix disastrous name
        collision which could lead to infinite loops.

2002-03-27  Darin Adler  <darin@apple.com>

	* src/kwq/KWQCString.mm: (QCString::isEmpty): The || should be &&.

2002-03-27  Darin Adler  <darin@apple.com>

	* src/kdelibs/khtml/css/css_valueimpl.cpp:
	(FontFamilyValueImpl::FontFamilyValueImpl): Disable misguided font matching
        code in khtml.
        
	* src/kwq/KWQFont.mm: (QFont::getFont): Change the fallback so that it uses
        the default font family, but the other settings as requested, rather than
        using the default font.

2002-03-27  Kenneth Kocienda  <kocienda@apple.com>
