@@ -1,3 +1,9 @@
+2002-03-28  Darin Adler  <darin@apple.com>
+
+	* src/kwq/KWQKloader.mm: (Cache::requestImage), (Cache::requestStyleSheet),
+	(Cache::requestScript): Set flags so the objects get freed when they are done
+        in cases where the cache is disabled.
+
 2002-03-28  Maciej Stachowiak  <mjs@apple.com>
 
 	Fix Radar 2890340 (JavaScript doesn't work)
